# compiler

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: rust.yml
.husky/: pre-commit
.sqlx/: query-7d44d1a9ae1d9407c20c447e0a4dade9419ff2cda35df888818523b766774108.json  query-847df828d68b37906a06f237174960913e87bfd23ebdcd7173793db75ee0f5fc.json
db/: package-lock.json
db/prisma/: schema.prisma
db/prisma/migrations/20250824180401_changes_code_storing/: migration.sql
db/prisma/migrations/20250826164142_add_authentication/: migration.sql
db/prisma/migrations/20250826174959_remove_auth/: migration.sql
db/prisma/migrations/20250827135458_add_language_and_execution_time/: migration.sql
src/: evaluator.rs  lexer.rs  main.rs  object.rs  parser.rs
web/: Dockerfile  package-lock.json  package.json  tailwind-config.cjs
web/app/: layout.tsx  loading.tsx  page.tsx
web/app/about/: page.tsx
web/app/compiler/: page.tsx
web/components/: LanguageSelector.tsx  OutputPanel.tsx  footer-7.tsx  message-loading.tsx  squares-background.tsx  star-border.tsx  testimonials-columns-1.tsx  tree-view.tsx  tubelight-navbar.tsx
web/lib/: utils.ts
