[package]
name = "multi-lang-compiler"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
tempfile = "3.0"
lazy_static = "1.4"